# transferclients-qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  qmake-client.pro
include/: mainwindow.hpp
src/: mainwindow.cpp  mainwindow.ui
